@startUML designClassesUseCase2

<style>
classDiagram {
  class {
      header {
        FontStyle bold
      }
  }
}
</style>

!theme plain
hide circle

skinparam actorStyle awesome
allowmixing

actor Student

'' NAVBAR

Class "<<JPanel>> \n Navbar " as Navbar {
}

Class "<<JLabel>> \n InteractiveIcon" as InteractiveIcon {
    - labelIcon: ImageIcon
    - labelAction: mouseListener
    + interactiveIcon(image, mouseListener)
}

InteractiveIcon -l- Navbar: 3

'' TESTVIEW

Class "<<JPanel>> \n TestViewPanel " as TestViewPanel {

}

Class "<<JPanel>> \n QuestionsPanel  " as QuestionsPanel {

}

Class "<<JPanel>> \n TestInfoPanel " as TestInfoPanel {
    - clock: JLabel 
    - answeredQuestions: JLabel
    - testName: JLabel
}

Class "<<JScrollPane>> \n ScrollableQuestionsPanel " as ScrollableQuestionsPanel {

}

Class "<<JButton>> \n BlueButton " as BlueButton {

}

Class "<<JPanel>> \n QuestionPanel  " as QuestionPanel {
    - questionNumber: JLabel
    - questionDomain: JLabel
    - optionText[]: JTextField
    - optionBox[]: JCheckBox
}

Class "<<JLabel>> \n QuestionDescription" as QuestionDescription {
    - questionType: Boolean
    - text: String
}

QuestionPanel -- ScrollableQuestionsPanel

TestInfoPanel -- QuestionsPanel

BlueButton -- TestInfoPanel

ScrollableQuestionsPanel -- QuestionsPanel

Navbar -l- TestViewPanel
QuestionsPanel -- TestViewPanel
TestViewPanel -- TestView
QuestionDescription -d-* QuestionPanel

Class "<<JFrame>> \n TestView  " as TestView{

    displayTest()

}

Class AnswerTestController{

    startTest()
}

Class SolutionsView{

    viewSolutions()
}

Class Test{

    type: text 
    duration: number
    calification: number

    endTest()
    addQuestion(Question)
}

Class Question{

    description: text
    justification: text
    userAnswer: Answer
    rightAnswer: Answer

    addAnwer(Answer)
    answerQuestion(Answer)
}

Class Answer{

    answerType:
}


Student -r-> TestView

TestView -r-> AnswerTestController

AnswerTestController -r-> SolutionsView

AnswerTestController -d-> Test

Question -r-* Test

Answer -r-* Question


@endUML